--- a/buit_new/package.json
+++ b/buit_new/package.json
@@ -12,11 +12,13 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "classnames": "^2.3.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3"
   },
